# interpreter

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  walkthrough.md
apps/extension/: package.json  tsconfig.json  wxt.config.ts
apps/extension/public/: offscreen.js  pcm-worklet.js  webrtc-intercept.js
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/convex/: participants.ts  schema.ts  sessions.ts  transcripts.ts  voiceProfiles.ts
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/services/: minimax_client.py  speechmatics_client.py  speechmatics_tts_client.py
extension/: manifest.json  package.json  vite.config.ts
extension/public/: capture-worklet.js
extension/src/: background.ts
extension/src/content/: meet-widget.ts
extension/src/offscreen/: offscreen.html  offscreen.ts
extension/src/popup/: App.tsx  index.css  index.html
extension/src/utils/: languages.ts
interpreter-OS/: .gitignore  README.md  package.json
interpreter-OS/relay/: .env.example  Dockerfile  package.json  server.ts
interpreter-OS/src/: App.css  App.tsx
interpreter-OS/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
interpreter-OS/src-tauri/capabilities/: default.json
interpreter-OS/src-tauri/src/: audio_device.rs  capture.rs  lib.rs  main.rs  models.rs  relay.rs
web/: index.html  package-lock.json  package.json  tsconfig.json
web/convex/: http.ts  schema.ts  userProfiles.ts
web/convex/_generated/: api.d.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: Dashboard.tsx  (+2 more)
(+32 files in other folders)
