[package]
name = "interpreter-os"
version = "0.1.0"
description = "Hackathon-ready macOS app audio translation widget"
authors = ["Codex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "interpreter_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
anyhow = "1"
futures-util = "0.3"
screencapturekit = { version = "1.5.4", features = ["macos_14_0"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"
url = "2"
rodio = "0.22.2"

[target.'cfg(target_os = "macos")'.dependencies]
# CoreAudio/CoreFoundation framework linking happens via #[link] or build.rs
# No extra crates needed — we use raw FFI in audio_device.rs
